apps/envds-daq/config/main/envds-daq-main.yaml
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: envds-daq-main-pv-volume
#   namespace: envds
#   labels:
#     type: local
# spec:
#   storageClassName: local-path
#   capacity:
#     storage: 10Gi
#   accessModes:
#     - ReadWriteOnce
#   hostPath:
#     # path: "/data/envds/data/registrar/main"
#     path: "/data/envds/registrar/main"
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: envds-daq-main-pv-claim
#   namespace: envds
# spec:
#   storageClassName: local-path
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 10Gi
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envds-daq-main
  namespace: envds
  labels:
    app: envds-daq-main
spec:
  selector:
    matchLabels:
      app: envds-daq-main
  template:
    metadata:
      labels:
        app: envds-daq-main
    spec:
      containers:
      - name: envds-daq-main
        image: envds-registry-main:5000/envds/envds-daq:0.1.0
        imagePullPolicy: "Always"
        resources:
          requests:
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: http
          containerPort: 9080
          protocol: TCP
        # volumeMounts:
        #   - name: envds-daq-main-pv-storage
        #     mountPath: /data
      # volumes:
      #   - name: envds-daq-main-pv-storage
      #     persistentVolumeClaim:
      #       claimName: envds-daq-main-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: envds-daq-main
  namespace: envds
  labels:
    app: envds-daq-main
spec:
  selector:
    app: envds-daq-main
  ports:
  - name: http
    protocol: TCP
    port: 9080
    targetPort: 9080
  - name: plots
    protocol: TCP
    port: 5004
    targetPort: 5004
  # - name: https
  #   port: 8883
  #   targetPort: 8883
  # type: LoadBalancer
  type: ClusterIP
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: envds-daq-stripprefix
  namespace: envds
  labels:
    app: envds
spec:
  stripPrefix:
    prefixes:
      - /envds/daq
      - /ws/envds/daq
      # - /plots/envds/daq/5004

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: envds-daq-ingress
  namespace: envds
  # labels:
  #   app: envds
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.middlewares:
      envds-envds-daq-stripprefix@kubernetescrd
      # default-erddap-rewrite@kubernetescrd
spec:
  rules:
  - http:
      paths:
      # - path: /erddap
      - path: /envds/daq
        pathType: Prefix
        # pathType: Exact
        backend:
          service:
            name: envds-daq-main
            port:
              number: 9080
      - path: /ws/envds/daq
        pathType: Prefix
        # pathType: Exact
        backend:
          service:
            name: envds-daq-main
            port:
              number: 9080
      # - path: /plots/envds/daq/5004
      #   pathType: Prefix
      #   # pathType: Exact
      #   backend:
      #     service:
      #       name: envds-daq-main
      #       port:
      #         number: 5004
# # ---
# # apiVersion: networking.k8s.io/v1
# # kind: Ingress
# # metadata:
# #   name: mosquitto-ingress
# #   namespace: envds-cloudy
# #   annotations:
# #     kubernetes.io/ingress.class: nginx
# #     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
# # spec:
# #   rules:
# #   - host: mosquitto.local
# #     http:
# #       paths:
# #         - pathType: Prefix
# #           path: "/"
# #           backend:
# #             service:
# #               name: mosquitto
# #               port: 
# #                 number: 9001
# # ---
# # apiVersion: traefik.containo.us/v1alpha1
# # kind: Middleware
# # metadata:
# #   name: envds-stripprefix
# #   namespace: envds
# #   labels:
# #     app: envds
# # spec:
# #   stripPrefix:
# #     prefixes:
# #       - /envds/main
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: envds-ingress
#   namespace: envds
#   labels:
#     app: envds
#   annotations:
#     ingress.kubernetes.io/ssl-redirect: "false"
#     # traefik.ingress.kubernetes.io/router.middlewares:
#     #   envds-envds-stripprefix@kubernetescrd
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /envds/main
#         pathType: Prefix
#         backend:
#           service:
#             name: envds
#             port:
#               number: 9080
# # ---
# # apiVersion: networking.k8s.io/v1
# # kind: Ingress
# # metadata:
# #   annotations:
# #     kubernetes.io/ingress.class: nginx
# #     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
# #     nginx.ingress.kubernetes.io/rewrite-target: /$2
# #     # nginx.ingress.kubernetes.io/rewrite-target: /
# #   name: envds-ingress
# #   namespace: envds
# # spec:
# #   rules:
# #   - http:
# #       paths:
# #         - path: /envds(/|$)(.*)
# #           pathType: Prefix
# #           backend:
# #             service:
# #               name: envds
# #               port: 
# #                 number: 9080
# #         # path: /envds(/|$)(.*)
# #         #   service: 
# #         #   serviceName: http-svc
# #         #   servicePort: 80
